--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
     border:border-box;
 }
 body {
-    background-image: url(herosection.webp);
-    height:100vh;
+    background-image: url(h1.webp);
+    height:500px;
     background-size: cover;
     background-repeat: no-repeat;
-    box-shadow: 5px 20px 40px 5px black inset;
+    box-shadow: 5px 20px 100px 3px black inset;
 }
 .navbar {
     height:80.22px; 
@@ -55,10 +55,118 @@ a {
     justify-content: space-between;
 }
 /********************************************MAIN****************************************/
-.aculinarylegacy {
-    font-size: 42px;
+.taj-hotel {
+    font-size: 43px;
     color:white;
+    font-weight: 100;
     position:absolute;
-    bottom:20px;
-    margin-left: 70px;;
+    top:350px;
+    left: 215px;
+}
+.space-1 {
+    height:400px;
+}
+.search {
+    position:absolute;
+    width:100vw;
+    position:absolute;
+    top:420px;
+    display: flex;
+    justify-content: center;
+}
+.searchbar {
+    width: 70vw;
+    height:50px;
+    border:none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-size:1.2rem ; 
+}
+.box {
+    height:50px;
+    width:50px;
+    background-color: white;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+/*************************************************FOOTER******************************************/
+.foot {
+    height: 750px;
+    background-color: #13130F;
+    padding:60px 170px 20px 170px;
+}
+.foot-1 {
+    width:470px;
+    height:300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.latest {
+    font-size: 1rem;
+    font-weight: 500;
+    color:#FFFFFF;
+    margin-top: 32px;
+}
+.input-email {
+    margin-top:20px;
+}
+.input-place {
+    background-color:#13130F;
+    border:none;
+    border-bottom:1px solid #FFFFFF;
+    width:235px;
+    height:25px;
+    font-weight: 550;
+}
+.input-button {
+    height:25px;
+    width:115px;
+    margin-left: 7px;
+    background-color: #FFFFFF;
+    border:none;
+    font-weight: 550;
+
+}
+.num-email {
+    display: flex;
+    gap:60px;
+    align-items: center;
+    height:17px;
+}
+.foot-1-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.link-list {
+    list-style-type: none;
+    font-size: 12px;
+    color: #FFFFFF;
+}
+li {
+    font-size: 0.85rem;
+
+    color:#ffffff;
+}
+
+.link-list {
+    height: 300px;
+    width: 230px;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap:10px;
+}
+.section-1 {
+    height:300px;
+    display: flex;
+    justify-content: flex-start;
+    gap:300px;
 }
